# nishcorp

./: .gitignore  README.md
ros_ws/src/prototype_description/: CMakeLists.txt  package.xml
ros_ws/src/prototype_description/config/: my_robot_controllers.yaml
ros_ws/src/prototype_description/launch/: display.launch.py  display.launch.xml  gazebo.launch.py  my_robot.launch.xml
ros_ws/src/prototype_description/src/: calculate_angle.cpp
ros_ws/src/prototype_description/urdf/: my_bot.ros2_control.xacro  my_bot_urdf.gazebo  my_bot_urdf.trans  my_bot_urdf.xacro
